Bug fix for classes and prestige classes expand and collapse function

--- a/mygm.style.css
+++ b/mygm.style.css
@@ -133,6 +133,7 @@
   width: 100%;
   display: block;
   margin: 1em;
+  margin: auto;
 }
 
 .class label {
